[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amberbuilder"
version = "0.1.0"
description = "A solvent configuration bulde3r "
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {name = "Zeke Piskulich", email = "piskulichz@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
]
urls = { "Homepage" = "https://github.com/piskulichz/amberbuilder" }

[tool.setuptools]
packages = [
      "amberbuilder"
  ]
